output/rubic_t01_onchain_findonly/foundry_validation/F-001_Old_proxy_credits_fee-on-transfer_inputs/forge_stdout_attempt3.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xA2B4C0af19cC16a6CfAC9CE81f192b024D625817". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xA2B4C0af19cC16a6CfAC9CE81f192b024D625817". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:374:21:
    |
374 |         tokens[2] = 0xA2b4C0Af19cc16a6CFAC9Ce81F192B024d625817;
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xCE3f08e664693ca792caCE4af1364D5e220827B2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xCE3f08e664693ca792caCE4af1364D5e220827B2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:376:21:
    |
376 |         tokens[4] = 0xCe3f08e664693ca792CAcE4af1364D5e220827B2;
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xf0f9D895aCa5c8678f706FB8216fa22957685A13". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xf0f9D895aCa5c8678f706FB8216fa22957685A13". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:377:21:
    |
377 |         tokens[5] = 0xf0f9D895aCa5c8678f706Fb8216FA22957685A13;
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xa7DE087329BFcda5639247F96140f9DAbe3DeED1". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xa7DE087329BFcda5639247F96140f9DAbe3DeED1". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:378:21:
    |
378 |         tokens[6] = 0xA7DE087329BFcda5639247F96140f9DAbe3DeED1;
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x26631C19F4D4c361Fe5F17BB4138F23840Aab5d3". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x26631C19F4D4c361Fe5F17BB4138F23840Aab5d3". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:379:21:
    |
379 |         tokens[7] = 0x26631C19F4d4c361Fe5F17bB4138f23840aAb5D3;
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xfB7B4564402E5500dB5bB6d63Ae671302777C75a". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xfB7B4564402E5500dB5bB6d63Ae671302777C75a". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:380:21:
    |
380 |         tokens[8] = 0xFB7B4564402e5500Db5BB6D63AE671302777C75a;
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xa57aC35Ce91EE92CeafAA8dD04140C8E232c2E50". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xa57aC35Ce91EE92CeafAA8dD04140C8E232c2E50". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:381:21:
    |
381 |         tokens[9] = 0xA57AC35ce91eE92cEAFaa8dD04140C8e232C2E50;
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

